--- a/mainIndex.html
+++ b/mainIndex.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link href="../css/main.css" rel="stylesheet" />
+	<link href="./dist/css/main.css" rel="stylesheet" />
 	<title>Wikipedia, the free encyclopedia</title>
 </head>
 
@@ -27,7 +27,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="featuredContentIndex.html"
+								<a href="./dist/html/featuredContentIndex.html"
 									title="Featured content - the best of Wikipedia">Featured content</a>
 							</li>
 							<li>
@@ -477,7 +477,7 @@
 													</a>
 												</li>
 												<li>
-													<a href="biographyIndex.html" title="Portal:Biography">
+													<a href="./dist/html/biographyIndex.html" title="Portal:Biography">
 														Biography
 													</a>
 												</li>
@@ -522,7 +522,7 @@
 													</a>
 												</li>
 												<li>
-													<a href="technologyIndex.html" title="Portal:Technology">
+													<a href="./dist/html/technologyIndex.html" title="Portal:Technology">
 														Technology
 													</a>
 												</li>
